--- a/font.html
+++ b/font.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>font-로 시작하는 글자 속성들</h1>
-<ul>
+<ul class="nm">
  <li>font-size: ; 글자 크기 적용</li>
  <li>font-weight: ; 글자 두께 적용</li>
  <li>font-style: ; 글자 기울기 적용</li>
@@ -44,13 +44,59 @@
 		 <p class="fw08">font-weight:800; 글자 두께</p>
 		 <p class="fw09">font-weight:900; 글자 두께</p>
 		 <p class="fw10">font-weight:bold; 글자 두께</p>
-		 <p class="fw11">font-weight:<b>normal</b>; 글자 두께</p>
-		 <p class="fw12">font-weight:16px; 글자 두께</p>
+		 <p>font-weight:<b class="fw11">normal</b>; 글자 두께</p>
+		 <p class="fw12">font-weight:<strong>normal</strong>; 글자 두께</p>
 </section>
 
+<section id="sec03">
+	<h2> 3. font-style: ;글자 기울기</h2>
+		 <p class="fst01">font-style: italic; 글자 기울기</p>
+		 <p class="fst02">font-style: oblique; 글자 기울기</p>
+		 <p >font-style: <i class="fst03">normal</i>; 글자 기울기</p>
+		 <p class="fst04">font-style: <em>test</em>; 글자 기울기</p>
+</section>
 
+<section id="sec04">
+	<h2>4. font-family: ; 글꼴(서체)</h2>
+		<p class="ff01">font-family: "Verdana","Helvetica","Arial",sans-serif ; 글꼴(서체)</p>
+		<p class="ff02">font-family: "Times New Roman","Georgia",serif ; 글꼴(서체)</p>
+		<p class="ff03">font-family: "Lucida console","Monaco",monospace ; 글꼴(서체)</p>
+		<p class="ff04">font-family: "Brush Script MT","Lucida Handwriting",cursive; 글꼴(서체)</p>
+		<p class="ff05">font-family: "Papyrus","Copperplate",fantasy; 글꼴(서체)</p>
+		<span class="go">https://fonts.google.com/</span>
+		<p class="ff06">font-family: 'Edu NSW ACT Foundation', cursive; google글꼴(서체)</p>
+		<!-- 'span' 태그는 존재가 html에 아무런 영향을 끼치지 않기 때문에, class를 부여할때 많이 사용한다 !! -->
+
+</section>
 
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
